// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioButton /> when nested in a RadioGroup should match the snapshot for a checked radio 1`] = `
<div
  class="radioGroup"
>
  <div
    class="root radio"
  >
    <input
      class="nativeInput"
      name="radio"
      type="radio"
      value="1"
    />
    <div
      class="checkable"
    >
      <div
        class="outerCircle"
      />
      <div
        class="innerCircle"
      />
    </div>
    <div
      class="focusRect"
    />
    <label
      class="label"
    >
      radio label 1
    </label>
  </div>
  <div
    class="root radio"
  >
    <input
      class="nativeInput"
      name="radio"
      type="radio"
      value="2"
    />
    <div
      class="checkable"
    >
      <div
        class="outerCircle"
      />
      <div
        class="innerCircle"
      />
    </div>
    <div
      class="focusRect"
    />
    <label
      class="label"
    >
      radio label 2
    </label>
  </div>
</div>
`;

exports[`<RadioButton /> when nested in a RadioGroup should match the snapshot for a group of radios 1`] = `
<div
  class="radioGroup"
>
  <div
    class="root radio"
  >
    <input
      class="nativeInput"
      name="radio"
      type="radio"
      value="1"
    />
    <div
      class="checkable"
    >
      <div
        class="outerCircle"
      />
      <div
        class="innerCircle"
      />
    </div>
    <div
      class="focusRect"
    />
    <label
      class="label"
    >
      radio label 1
    </label>
  </div>
  <div
    class="root radio"
  >
    <input
      class="nativeInput"
      name="radio"
      type="radio"
      value="2"
    />
    <div
      class="checkable"
    >
      <div
        class="outerCircle"
      />
      <div
        class="innerCircle"
      />
    </div>
    <div
      class="focusRect"
    />
    <label
      class="label"
    >
      radio label 2
    </label>
  </div>
  <div
    class="root radio"
  >
    <input
      class="nativeInput"
      name="radio"
      type="radio"
      value="3"
    />
    <div
      class="checkable"
    >
      <div
        class="outerCircle"
      />
      <div
        class="innerCircle"
      />
    </div>
    <div
      class="focusRect"
    />
    <label
      class="label"
    >
      radio label 3
    </label>
  </div>
  <div
    class="root radio"
  >
    <input
      class="nativeInput"
      name="radio"
      type="radio"
      value="4"
    />
    <div
      class="checkable"
    >
      <div
        class="outerCircle"
      />
      <div
        class="innerCircle"
      />
    </div>
    <div
      class="focusRect"
    />
    <label
      class="label"
    >
      radio label 4
    </label>
  </div>
</div>
`;

exports[`<RadioButton /> when nested in a RadioGroup should match the snapshot for a single radio 1`] = `
<div
  class="radioGroup"
>
  <div
    class="root radio"
  >
    <input
      class="nativeInput"
      name="radio"
      type="radio"
      value="1"
    />
    <div
      class="checkable"
    >
      <div
        class="outerCircle"
      />
      <div
        class="innerCircle"
      />
    </div>
    <div
      class="focusRect"
    />
    <label
      class="label"
    >
      radio label 1
    </label>
  </div>
</div>
`;

exports[`<RadioButton /> when nested in a RadioGroup should match the snapshot for a single radio with no value or label 1`] = `
<div
  class="radioGroup"
>
  <div
    class="root radio"
  >
    <input
      class="nativeInput"
      name="radio"
      type="radio"
      value=""
    />
    <div
      class="checkable"
    >
      <div
        class="outerCircle"
      />
      <div
        class="innerCircle"
      />
    </div>
    <div
      class="focusRect"
    />
    <label
      class="label"
    />
  </div>
</div>
`;

exports[`<RadioButton /> when with component child should match the snapshot 1`] = `
<div
  class="radioGroup"
>
  <div
    class="root radio"
  >
    <input
      class="nativeInput"
      name="radio"
      type="radio"
      value="1"
    />
    <div
      class="checkable"
    >
      <div
        class="outerCircle"
      />
      <div
        class="innerCircle"
      />
    </div>
    <div
      class="focusRect"
    />
    <label
      class="label"
    >
      <h1
        class="root sizeScale6"
      >
        Hello checkbox
      </h1>
    </label>
  </div>
</div>
`;

exports[`<RadioButton /> when with component child should render the component child 1`] = `
<h1
  class="root sizeScale6"
>
  Hello checkbox
</h1>
`;
